--- a/6-navegador-html-css/6.5-css-grid/6.5.2-grid-areas/css/styles.css
+++ b/6-navegador-html-css/6.5-css-grid/6.5.2-grid-areas/css/styles.css
@@ -2,7 +2,8 @@
     display: grid;
     width: 100%;
     height: 50vh;
-    grid-template-areas: "head head"
+    grid-template-areas:
+        "head head"
         "nav main"
         "nav foot";
     grid-template-columns: 20% 80%;
